# 2025-final-command-team-25-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.sh
app/: alembic.ini  config.py  db.py  dependencies.py  main.py  service.py  test_buffer.py
app/api/: __init__.py
app/api/admins/: admin_access.py  crud.py  exceptions.py  view.py
app/api/booking/: crud.py  exceptions.py  view.py
app/api/coworkings/: crud.py  exceptions.py  view.py
app/api/users/: auth.py  crud.py  exceptions.py  s3.py  view.py
app/migrations/: alembic.ini  alembic_tests.ini  env.py  migrations.py
app/migrations/versions/: 0b487787c565_deleted_mistakes.py  0e47abfac657_delete_all_coworkings.py  1a7f5affb3be_changing_seat_id_from_uuid_to_str.py  1f605e6db5ff_add_user_id_for_seat_bookings.py  26daa637b8ab_clean.py  2f999816de8c_change_enum_to_standard2.py  3c8e35326f76_added_passport_data_variables.py  3dfd7d812d93_add_colume_coworking_id_in_table_tables.py  491d2ee93e3c_add_bans.py  5151c25cd433_fix_last_migration.py  6214c48f418f_statics_data.py  63006692c655_add_tz_offset_for_coworkings.py  6bcad01dd26e_try_to_fix_seats.py  6dc8a6b3e55b_add_seats_price.py  70db0a9f53bd_changed_id_for_seats.py  72f7dbfe324c_change_enum_to_standard.py  7388e59e0980_update_db_model.py  (+17 more)
app/models/: __init__.py  auth_sessions.py  booking.py  coworkings.py  objects.py  users.py
app/schemas/: __init__.py  auth.py  booking.py  coworkings.py  enums.py  qrs.py  seats.py  users.py
app/test/: conftest.py  test_api.py  test_db.py
app/tools/: extractor.py
jobs/: build.yaml  deploy.yaml
(+5 files in other folders)
